--- a/docs/tutorials/hello-world.ipynb
+++ b/docs/tutorials/hello-world.ipynb
@@ -327,8 +327,8 @@
     "\n",
     "  # Use the following code instead if you want to run on a simulator:\n",
     "\n",
-    "  from qiskit_ibm_runtime.fake_provider import FakeAlmadenV2\n",
-    "  backend = FakeAlmadenV2()\n",
+    "  from qiskit_ibm_runtime.fake_provider import FakeFez\n",
+    "  backend = FakeFez()\n",
     "  estimator = Estimator(backend)\n",
     "\n",
     "  # Convert to an ISA circuit and layout-mapped observables.\n",
