--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1adb4ac8-f331-485b-89f5-e4ec20a6855f",
    "metadata": {},
    "source": [
     "# Visualize results"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6efd5b06-c754-4b34-a14d-e404c9e920cb",
    "metadata": {
     "tags": [
      "version-info"
@@ -32,7 +30,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b446771a-caf4-4b59-8e8c-1d115249b818",
    "metadata": {},
    "source": [
     "## Plot histogram <a name='histogram'></a>\n",
@@ -53,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "03592c4f-8a0a-4c0b-81f6-658f57d33ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ff2c2d1-185f-4183-b80a-b5b599411245",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +98,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b41d6da-1bca-4b82-ac84-b5b811b7d430",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330e0fcb-ce13-4ad2-855e-4e0b8665cf76",
    "metadata": {},
    "source": [
     "### Options when plotting a histogram\n",
@@ -141,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f456bcc-94a8-4522-9be2-77ea91045c1f",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +170,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3d185d-96ce-4a91-890f-b8e3d7f31eb0",
    "metadata": {},
    "source": [
     "## Plotting estimator results\n",
@@ -191,7 +182,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "35e07a46-8423-44ff-abad-7c10c72291a5",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +254,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e52ff0-96d5-45fb-b5df-38f43fd19ecc",
    "metadata": {},
    "source": [
     "The following cell uses the estimated [standard error](https://en.wikipedia.org/wiki/Standard_error) of each result and adds them as error bars. See the [`bar` plot documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) for a full description of the plot."
@@ -273,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6f122049-0b5a-49e8-bde4-d99d91f4b77c",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +301,7 @@
  "metadata": {
   "description": "Plot quantum circuit execution results using Qiskit",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.2"
   },
   "title": "Visualize results"
  },
