--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -87,6 +87,8 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 * [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings)
 
+* [Compilation methods for Hamiltonian simulation circuits](/docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits)
+
 * [Long-range entanglement with dynamic circuits](/docs/tutorials/long-range-entanglement)
 
 
