--- a/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
+++ b/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
@@ -60,8 +60,7 @@
     "\n",
     "Before starting this tutorial, be sure you have the following installed:\n",
     "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)\n",
-    "- Rustworkx graph library (`pip install rustworkx`)"
+    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
