bring over supported instructions

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -256,6 +256,47 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Native gates\n",
+    "\n",
+    "Each [processor family](/docs/guides/processor-types) has a native gate set. By default, the QPUs in each family only support running the gates and operations in the native gate set. Thus, every gate in the circuit must be translated (by the transpiler) to the elements of this set.\n",
+    "\n",
+    "You can view the native gates and operations for a QPU either [with Qiskit](#native-gates-with-qiskit) or on the IBM Quantum&reg; Platform [Compute resources page](#native-gates-on-platform).\n",
+    "\n",
+    "<Admonition type=\"note\" title=\"Basis gates\">\n",
+    "The terms native gates and basis gates are often used interchangeably. However, you can specify a different set of basis gates to use, while the native gate set never changes. For information about changing the basis gates, see the [Represent quantum computers](/docs/guides/represent-quantum-computers#basis-gates) topic.\n",
+    "</Admonition>\n",
+    "\n",
+    "<span id=\"native-gates-with-qiskit\"></span>\n",
+    "### With Qiskit\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
+    "\n",
+    "for backend in service.backends():\n",
+    "    config = backend.configuration()\n",
+    "    if \"simulator\" in config.backend_name:\n",
+    "        continue\n",
+    "    print(f\"Backend: {config.backend_name}\")\n",
+    "    print(f\"    Processor type: {config.processor_type}\")\n",
+    "    print(f\"    Supported instructions:\")\n",
+    "    for instruction in config.supported_instructions:\n",
+    "        print(f\"        {instruction}\")\n",
+    "    print()\n",
+    "```\n",
+    "\n",
+    "<span id=\"native-gates-on-platform\"></span>\n",
+    "### On IBM Quantum Platform\n",
+    "\n",
+    "Select any QPU on the [Compute resources](https://quantum.cloud.ibm.com/computers) page. The default gates for that QPU are listed under Details. Note that the non-unitary operations are not listed here; use the method in Qiskit described above to see all native gates and operations for a QPU."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48cf020c-24eb-49dd-a417-7196d036b0e8",
    "metadata": {},
    "source": [
