--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -112,6 +112,7 @@ Click the download icon in the upper right of any tab to download a CSV file of 
 
 ![The table view tab shows the calibration information as numerical data.](/docs/images/guides/qpu-information/table-view.avif "Table view tab")
 
+<span id="native-gates"></span>
 ## List of native gates and operations
 
 | Name |  Notes |
