--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -73,9 +73,10 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
     token=token, # Your token is confidential.
     # Do not share your key in public code.
     instance="<IBM Cloud CRN or instance name>", # Optionally specify the instance to use.
-    plans_preference="['plan-type1', 'plan-type2']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
-    region="<region>", # Optionally set the region to prioritize. This is ignored if the instance is specified.
-    name="<account-name>", # Optionally name this set of account credentials.
+    plans_preference="['open', 'premium']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
+    # Additionally, instances of a certain plan can be excluded if the plan name is not specified.
+    region="us-east", # Optionally set the region to prioritize. Accepted values are 'us-east' or 'eu-de'. This is ignored if the instance is specified.
+    name="<account-name>", # Optionally name this set of account credentials. 
     set_as_default=True, # Optionally set these as your default credentials.
   )
 ```
