--- a/docs/tutorials/shors-algorithm.ipynb
+++ b/docs/tutorials/shors-algorithm.ipynb
@@ -8,8 +8,8 @@
     ]
    },
    "source": [
-    "# Shor's Algorithm\n",
-    "[Shor's algorithm](https://epubs.siam.org/doi/abs/10.1137/S0036144598347011), developed by Peter Shor in 1994, is a groundbreaking quantum algorithm for factoring integers in polynomial time. Its significance lies in its ability to factor large integers exponentially faster than any known classical algorithm, threatening the security of widely used cryptographic systems like RSA, which rely on the difficulty of factoring large numbers. By efficiently solving this problem on a sufficiently powerful quantum computer, Shor's algorithm could revolutionize fields such as cryptography, cybersecurity, and computational mathematics, underscoring the transformative power of quantum computation.\n",
+    "# Shor's algorithm\n",
+    "[Shor's algorithm,](https://epubs.siam.org/doi/abs/10.1137/S0036144598347011) developed by Peter Shor in 1994, is a groundbreaking quantum algorithm for factoring integers in polynomial time. Its significance lies in its ability to factor large integers exponentially faster than any known classical algorithm, threatening the security of widely used cryptographic systems like RSA, which rely on the difficulty of factoring large numbers. By efficiently solving this problem on a sufficiently powerful quantum computer, Shor's algorithm could revolutionize fields such as cryptography, cybersecurity, and computational mathematics, underscoring the transformative power of quantum computation.\n",
     "\n",
     "\n",
     "This tutorial focuses on demonstrating Shor's algorithm by factoring 15 on a quantum computer. \n",
