--- a/docs/tutorials/shors-algorithm.ipynb
+++ b/docs/tutorials/shors-algorithm.ipynb
@@ -534,7 +534,7 @@
    "id": "1f12fb24-257b-4b12-b7c5-e01b975e3216",
    "metadata": {},
    "source": [
-    "We saw that $M_b$ operators for a given $b \\in \\mathbb{Z}^*_N$ are permutation operations. Due to the relatively small size of the permutation problem that we have here, since $N=15$ requires only 4 qubits, we were able to synthesize these operations directly with ``SWAP`` gates by inspection. In general, this might not be a scalable approach. Instead, we might need to construct the permuation matrix explicitly, and use Qiskit's ``UnitaryGate`` class and transpilation methods to synthesize this permutation matrix. However, this can result in significantly deeper circuits. Below, we show an example for this."
+    "We saw that $M_b$ operators for a given $b \\in \\mathbb{Z}^*_N$ are permutation operations. Due to the relatively small size of the permutation problem that we have here, since $N=15$ requires only 4 qubits, we were able to synthesize these operations directly with ``SWAP`` gates by inspection. In general, this might not be a scalable approach. Instead, we might need to construct the permutation matrix explicitly, and use Qiskit's ``UnitaryGate`` class and transpilation methods to synthesize this permutation matrix. However, this can result in significantly deeper circuits. Below, we show an example for this."
    ]
   },
   {
