rmv channel specification

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -266,7 +266,7 @@
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum_platform\")\n",
+    "service = QiskitRuntimeService()\n",
     "\n",
     "for backend in service.backends():\n",
     "    config = backend.configuration()\n",
