add back if_else

--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -126,3 +126,4 @@ Click the download icon in the upper right of any tab to download a CSV file of 
 | [reset](/docs/api/qiskit/circuit#qiskit.circuit.Reset)  | single-qubit gate, non-unitary; not the same as the initialization done at the start of a circuit to prepare the all 0's state |
 | [measure](/docs/api/qiskit/circuit#qiskit.circuit.Measure) | |
 | [delay](/docs/api/qiskit/circuit#qiskit.circuit.Delay) |  |
+| [if_else](/docs/api/qiskit/qiskit.circuit.IfElseOp) | control flow for classical feedforward |
