--- a/docs/guides/qpu-information.mdx
+++ b/docs/guides/qpu-information.mdx
@@ -117,8 +117,8 @@ Click the download icon in the upper right of any tab to download a CSV file of 
 | :--- | :--- |
 | [CZ](/docs/api/qiskit/qiskit.circuit.library.CZGate) | two-qubit gate |
 | [ECR](/docs/api/qiskit/qiskit.circuit.library.ECRGate) | two-qubit gate |
-| [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) | two-qubit gate |
-| [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) | single-qubit gate |
+| [RZZ](/docs/api/qiskit/qiskit.circuit.library.RZZGate) | two-qubit fractional gate |
+| [RX](/docs/api/qiskit/qiskit.circuit.library.RXGate) | single-qubit fractional gate |
 | [RZ](/docs/api/qiskit/qiskit.circuit.library.RZGate) | single-qubit gate |
 | [SX](/docs/api/qiskit/qiskit.circuit.library.SXGate)  |single-qubit gate |
 | [X](/docs/api/qiskit/qiskit.circuit.library.XGate)  | single-qubit gate |
