Remove native-gates file; update get-qpu-information, qpu-information, and processor-types accordingly (#3613)
Closes #3070 

@jyu00 I am removing for_loop and switch_case from Heron. Where should
the `fractional gates` link point - the [page in the
guides](https://quantum.cloud.ibm.com/docs/en/guides/fractional-gates),
or somewhere in the API (like the rest of the table)? Also, anything to
put in the notes field?

---------

Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>

--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -248,6 +248,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a055938-0a1d-46ef-ae9c-60a7960d6d73",
+   "metadata": {},
+   "source": [
+    "## Native gates and operations\n",
+    "\n",
+    "Each [processor family](/docs/guides/processor-types) has a native gate set. By default, the QPUs in each family only support running the gates and operations in the native gate set. Thus, every gate in the circuit must be translated (by the transpiler) to the elements of this set.\n",
+    "\n",
+    "You can view the native gates and operations for a QPU either [with Qiskit](#native-gates-with-qiskit), or on the IBM Quantum&reg; Platform [Compute resources page](/docs/guides/qpu-information#native-gates-on-platform).\n",
+    "\n",
+    "<span id=\"native-gates-with-qiskit\"></span>\n",
+    "```python\n",
+    "\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "\n",
+    "service = QiskitRuntimeService()\n",
+    "\n",
+    "for backend in service.backends():\n",
+    "    config = backend.configuration()\n",
+    "    if \"simulator\" in config.backend_name:\n",
+    "        continue\n",
+    "    print(f\"Backend: {config.backend_name}\")\n",
+    "    print(f\"    Processor type: {config.processor_type}\")\n",
+    "    print(f\"    Supported instructions:\")\n",
+    "    for instruction in config.supported_instructions:\n",
+    "        print(f\"        {instruction}\")\n",
+    "    print()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "48cf020c-24eb-49dd-a417-7196d036b0e8",
    "metadata": {},
    "source": [
