--- a/docs/guides/repetition-rate-execution.ipynb
+++ b/docs/guides/repetition-rate-execution.ipynb
@@ -5,7 +5,7 @@
    "id": "255dc213-977b-46de-86f4-3bab0a005340",
    "metadata": {},
    "source": [
-    "# Dynamic repetition rate execution"
+    "# Qubit initialization"
    ]
   },
   {
@@ -34,7 +34,9 @@
    "id": "abdfb100-5321-41d7-8aee-117062aed595",
    "metadata": {},
    "source": [
-    "When a circuit is executed on an IBM&reg; quantum processing unit (QPU), an implicit reset is typically inserted at the beginning of the circuit to ensure the qubits are initialized to zero. However, the reset process is not perfect, leading to state preparation errors. To alleviate the error, the system also inserts repetition delay time (or `rep_delay`) between circuits. Each backend has a different default `rep_delay`, but it's usually longer than T1 to allow the environment to reset the qubits. The default `rep_delay` can be queried by running `backend.default_rep_delay`.\n",
+    "When a circuit is executed on an IBM&reg; quantum processing unit (QPU), an implicit reset is typically inserted at the beginning of the circuit to ensure the qubits are initialized to zero. This is controlled by the `init_qubits` flag, set as a [primitive execution option](/docs/api/qiskit-ibm-runtime/options-execution-options-v2).\n",
+    "\n",
+    "However, the reset process is not perfect, leading to state preparation errors. To alleviate the error, the system also inserts repetition delay time (or `rep_delay`) between circuits. Each backend has a different default `rep_delay`, but it's usually longer than T1 to allow the environment to reset the qubits. The default `rep_delay` can be queried by running `backend.default_rep_delay`.\n",
     "\n",
     "All IBM QPUs use dynamic repetition rate execution, which allows you to change the `rep_delay` for each job. Circuits you submit in a primitive job are batched together for execution on the QPU. These circuits are executed by iterating over the circuits for each shot requested; the execution is column-wise over a matrix of circuits and shots, as illustrated in the following figure.\n",
     "\n",
@@ -45,6 +47,7 @@
     "\n",
     "![This image shows that as the `rep_delay` value is lowered, the state preparation error rate increases.](/docs/images/guides/repetition-rate-execution/rep_delay.avif \"Repetition delay versus error rate\")\n",
     "\n",
+    "Setting both `rep_delay=0` and `init_qubits=False` essentially \"merges\" the circuits together, since the qubits will begin in the final state from the previous shot.\n",
     "\n",
     "Note that while circuits in a primitive job are batched together for QPU execution, there is no guarantee on the order the circuits from PUBs are executed. Thus, even though you submit `pubs=[pub1, pub2]`, there is no guarantee the circuits from `pub1` will run before those from `pub2`. There is also no guarantee that circuits from the same job would run as a single batch on the QPU.\n",
     "\n",
@@ -108,7 +111,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Dynamic repetition rate execution"
+  "title": "Qubit initialization"
  },
  "nbformat": 4,
  "nbformat_minor": 4
