--- a/docs/api/qiskit-ibm-runtime/release-notes.mdx
+++ b/docs/api/qiskit-ibm-runtime/release-notes.mdx
@@ -39,7 +39,7 @@ The qiskit-ibm-runtime `v0.41.0` release focuses on the removal of IBM Quantum P
 
 *   Support for running `qiskit-ibm-runtime` with Python 3.9 has been deprecated and will be removed in a future release.
 
-    Additionally, `qiskit-ibm-runtime` now officialy supports Python 3.13. ([2314](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2314))
+    Additionally, `qiskit-ibm-runtime` now officially supports Python 3.13. ([2314](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2314))
 
 *   When saving an account, there is now a validation check to make sure the `region`, `plans_preference`, and `tags` parameters are valid. ([2319](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2319))
 
