--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -135,8 +135,8 @@ Wondering what has changed? Read the [changelog](https://github.com/Qiskit/qiski
 The qiskit-ibm-runtime `v0.41.0` release focuses on the removal of IBM Quantum Platform Classic and improving the user experience for the new IBM Quantum Platform. Among new features, improvements, and minor bug fixes, the release highlights are:
 
 > *   The `ibm_quantum` channel and IQP Classic are no longer supported.
-> *   [`QiskitRuntimeService.least_busy()`](qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") is significantly faster.
-> *   [`QiskitRuntimeService.usage()`](qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to return information regarding the current instance usage limit, consumption, and time remaining.
+> *   [`QiskitRuntimeService.least_busy()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") is significantly faster.
+> *   [`QiskitRuntimeService.usage()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to return information regarding the current instance usage limit, consumption, and time remaining.
 
 ### Upgrade Notes
 
@@ -144,7 +144,7 @@ The qiskit-ibm-runtime `v0.41.0` release focuses on the removal of IBM Quantum P
 
 ### New Features
 
-*   A new parameter, `tags`, has been added to the [`QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") initializer and [`QiskitRuntimeService.save_account()`](qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account") method. `tags` can be used to **filter** instances so only instances with the given tags are returned.
+*   A new parameter, `tags`, has been added to the [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") initializer and [`QiskitRuntimeService.save_account()`](qiskit-runtime-service#save_account "qiskit_ibm_runtime.QiskitRuntimeService.save_account") method. `tags` can be used to **filter** instances so only instances with the given tags are returned.
 
     Additionally, if no valid instances are returned when using the `tags`, `region`, or `plans_preference` filters, an error will now be raised at initialization. Make sure the names of the `tags` and `region` passed in match the instance `tags` or `region` exactly (case-insensitive). For `plans_preference`, as long as a matching plan name is passed in, instances with the matching plan name will be prioritized. ([2277](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2277))
 
@@ -152,24 +152,24 @@ The qiskit-ibm-runtime `v0.41.0` release focuses on the removal of IBM Quantum P
 
     Additionally, `qiskit-ibm-runtime` now officially supports Python 3.13. ([2314](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2314))
 
-*   There is a new method, [`QiskitRuntimeService.active_instance()`](qiskit-runtime-service#active_instance "qiskit_ibm_runtime.QiskitRuntimeService.active_instance") which returns the IBM Cloud CRN of the current active instance.
+*   There is a new method, [`QiskitRuntimeService.active_instance()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#active_instance "qiskit_ibm_runtime.QiskitRuntimeService.active_instance") which returns the IBM Cloud CRN of the current active instance.
 
-    The [`QiskitRuntimeService.jobs()`](qiskit-runtime-service#jobs "qiskit_ibm_runtime.QiskitRuntimeService.jobs") method has been updated to properly accept the `instance` parameter, which can be used to filter jobs. ([2325](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2325))
+    The [`QiskitRuntimeService.jobs()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#jobs "qiskit_ibm_runtime.QiskitRuntimeService.jobs") method has been updated to properly accept the `instance` parameter, which can be used to filter jobs. ([2325](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2325))
 
-*   [`QiskitRuntimeService.usage()`](qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to include a `usage_remaining_seconds` field. This field includes the difference between the reported `usage_limit_seconds` or `usage_allocation_seconds` (depending on how the instance is configured) and `usage_consumed_seconds`. Learn more about instance allocation limits [here](/docs/guides/allocation-limits). ([2329](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2329))
+*   [`QiskitRuntimeService.usage()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#usage "qiskit_ibm_runtime.QiskitRuntimeService.usage") has been updated to include a `usage_remaining_seconds` field. This field includes the difference between the reported `usage_limit_seconds` or `usage_allocation_seconds` (depending on how the instance is configured) and `usage_consumed_seconds`. Learn more about instance allocation limits [here](/docs/guides/allocation-limits). ([2329](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2329))
 
-*   The [`QiskitRuntimeService`](qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") has been updated to use a new API version. With the new version, the [`QiskitRuntimeService.least_busy()`](qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") method has been updated to take advantage of the updated `BackendsResponseV2` which makes it significantly faster. ([2323](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2323))
+*   The [`QiskitRuntimeService`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service "qiskit_ibm_runtime.QiskitRuntimeService") has been updated to use a new API version. With the new version, the [`QiskitRuntimeService.least_busy()`](qiskit-runtime-service#least_busy "qiskit_ibm_runtime.QiskitRuntimeService.least_busy") method has been updated to take advantage of the updated `BackendsResponseV2` which makes it significantly faster. ([2323](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2323))
 
 
 ### Bug Fixes
 
-*   Fixed a bug in `BasePrimitive` where primitives instantiated inside a [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") context manager without the `mode` parameter would fetch the backend from the service (by name) instead of using the backend passed to the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch"). This could cause issues when the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") backend was modified by users (for example, by removing a gate), because the primitives would instead fetch the unmodified backend object from the service. After the fix, the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") backend object is used directly. ([2282](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2282))
-*   Fixed an issue in [`IBMBackend`](ibm-backend "qiskit_ibm_runtime.IBMBackend") where property changes, such as modifications to `basis_gates`, persisted even after the backend object was renewed. ([2283](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2283))
+*   Fixed a bug in `BasePrimitive` where primitives instantiated inside a [`Session`](/docs/api/qiskit-ibm-runtime/session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") context manager without the `mode` parameter would fetch the backend from the service (by name) instead of using the backend passed to the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch"). This could cause issues when the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") backend was modified by users (for example, by removing a gate), because the primitives would instead fetch the unmodified backend object from the service. After the fix, the [`Session`](session "qiskit_ibm_runtime.Session") or [`Batch`](batch "qiskit_ibm_runtime.Batch") backend object is used directly. ([2282](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2282))
+*   Fixed an issue in [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") where property changes, such as modifications to `basis_gates`, persisted even after the backend object was renewed. ([2283](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2283))
 
 ### Other Notes
 
-*   The deprecated [`IBMBackend`](ibm-backend "qiskit_ibm_runtime.IBMBackend") attributes, `max_shots` and `max_experiments`, have been removed and the `IBMBackend.max_circuits()` method now returns `None`. See the [job limits guide](/docs/guides/job-limits#job-limits) for details. ([2235](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2235))
-*   The deprecated [`IBMBackend`](ibm-backend "qiskit_ibm_runtime.IBMBackend") and `FakeBackendV2` `defaults()` methods have been removed. They were deprecated in the v0.38.0 release. Pulse defaults have also been removed from all fake backends. ([2238](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2238))
+*   The deprecated [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") attributes, `max_shots` and `max_experiments`, have been removed and the `IBMBackend.max_circuits()` method now returns `None`. See the [job limits guide](/docs/guides/job-limits#job-limits) for details. ([2235](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2235))
+*   The deprecated [`IBMBackend`](/docs/api/qiskit-ibm-runtime/ibm-backend "qiskit_ibm_runtime.IBMBackend") and `FakeBackendV2` `defaults()` methods have been removed. They were deprecated in the v0.38.0 release. Pulse defaults have also been removed from all fake backends. ([2238](https://github.com/Qiskit/qiskit-ibm-runtime/pull/2238))
 
 - See the full [0.41.0 release notes.](/docs/api/qiskit-ibm-runtime/release-notes#0400-2025-05-28)
 
