Use generic eagle processors for estimates

--- a/docs/tutorials/operator-back-propagation.ipynb
+++ b/docs/tutorials/operator-back-propagation.ipynb
@@ -8,7 +8,7 @@
     "{/* cspell:ignore simeq  // This in an equation and isn't being ignored correctly */}\n",
     "\n",
     "# Operator backpropagation (OBP) for estimation of expectation values\n",
-    "*Usage estimate: 16 minutes on ibm_nazca (NOTE: This is an estimate only. Your runtime might vary.)*"
+    "*Usage estimate: 16 minutes on an Eagle processor (NOTE: This is an estimate only. Your runtime might vary.)*"
    ]
   },
   {
