--- a/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8e0d33b8-7f9c-428d-a76d-d832747b8430",
    "metadata": {},
    "outputs": [
@@ -745,7 +745,7 @@
     }
    ],
    "source": [
-    "# This required 13 min, 20 s QPU time on ibm_cusco, 28 min total time.\n",
+    "# This required 13 min, 20 s QPU time on an Eagle processor, 28 min total time.\n",
     "with Session(backend=backend) as session:\n",
     "    estimator = Estimator(mode=session)\n",
     "    estimator.options.default_shots = 10000\n",
