--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -679,7 +679,7 @@
     "    operational=True, min_num_qubits=ansatz.num_qubits, simulator=False\n",
     ")\n",
     "# Or get a specific backend:\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Use a pass manager to transpile the circuit and observable for the specific backend being used:\n",
     "\n",
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "389b7e86-cd61-4184-96c3-ae91b8ad59f5",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
     ")\n",
     "\n",
     "# Or get a specific backend:\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Use a pass manager to transpile the circuit and observable for the specific backend being used:\n",
     "\n",
@@ -1346,7 +1346,7 @@
     "# )\n",
     "\n",
     "# Or use a specific backend\n",
-    "backend = service.backend(\"ibm_cusco\")\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "# Initialize some variables to save the results from different runs:\n",
     "\n",
