--- a/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
+++ b/learning/courses/variational-algorithm-design/examples-and-applications.ipynb
@@ -1290,7 +1290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_cusco')>\n"
+      "<IBMBackend('ibm_brisbane')>\n"
      ]
     }
    ],
@@ -1304,7 +1304,7 @@
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "# Or use a specific backend\n",
-    "# backend = service.backend(\"ibm_cusco\")\n",
+    "# backend = service.backend(\"ibm_brisbane\")\n",
     "print(backend)"
    ]
   },
