--- a/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
+++ b/learning/courses/variational-algorithm-design/instances-and-extensions.ipynb
@@ -220,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_cusco')>\n"
+      "<IBMBackend('ibm_brisbane')>\n"
      ]
     }
    ],
