--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -1575,7 +1575,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_nazca\n"
+      "ibm_brisbane\n"
      ]
     }
    ],
@@ -1585,7 +1585,7 @@
     "# To run on hardware, select the least busy quantum computer or specify a particular one.\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
-    "# backend = service.backend(\"ibm_kyoto\")\n",
+    "# backend = service.backend(\"ibm_brisbaneane\")\n",
     "\n",
     "print(backend.name)"
    ]
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "a8fe6724-f67d-41b9-a548-08428cf8faf0",
    "metadata": {},
    "outputs": [
@@ -1746,7 +1746,7 @@
     }
    ],
    "source": [
-    "# This was run on ibm_nazca on 10-4-24, and took 7 min.\n",
+    "# This was run on an Eagle processor on 10-4-24, and took 7 min.\n",
     "\n",
     "from qiskit_ibm_runtime import (\n",
     "    EstimatorV2 as Estimator,\n",
