--- a/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
@@ -2046,7 +2046,7 @@
     "\n",
     "Build a GHZ circuit for 20 qubits or more so that the measurement result meets the criteria: The fidelity of your GHZ state > 0.5.\n",
     "\n",
-    "- You need to use an Eagle device (such as `ibm_kyiv`) and set the shots number as 40,000.\n",
+    "- You need to use an Eagle device (such as `ibm_brisbane`) and set the shots number as 40,000.\n",
     "- You should execute the GHZ circuit using the `execute_ghz_fidelity` function, and calculate the fidelity using the `check_ghz_fidelity_from_jobs` function.\n",
     "You need to find the biggest qubits - GHZ circuit which meet the criteria. Write your code below, show the result with the function `check_ghz_fidelity_from_jobs` .\n",
     "\n",
