--- a/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
+++ b/learning/courses/quantum-machine-learning/quantum-kernel-methods.ipynb
@@ -214,7 +214,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<IBMBackend('ibm_sherbrooke')>\n"
+      "<IBMBackend('ibm_brisbane')>\n"
      ]
     }
    ],
