--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -566,7 +566,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ibm_sherbrooke\n"
+      "ibm_brisbane\n"
      ]
     }
    ],
