--- a/learning/modules/computer-science/quantum-key-distribution.ipynb
+++ b/learning/modules/computer-science/quantum-key-distribution.ipynb
@@ -984,7 +984,7 @@
    "source": [
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
-    "# This calculation was run on ibm_sherbrooke on 11-7-24 and required 3 s to run, with 127 qubits.\n",
+    "# This calculation was run on an Eagle processor on 11-7-24 and required 3 sec to run, with 127 qubits.\n",
     "# Qiskit patterns step 1: Mapping your problem to a quantum circuit\n",
     "\n",
     "bit_num = 127\n",
