--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c60285b4-72df-4a5d-9ee1-41efc0123fce",
    "metadata": {},
    "source": [
     "# Real-time benchmarking for qubit selection\n",
@@ -11,6 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "643fe0b3-d024-4d94-9603-6cdf680d297c",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -24,6 +26,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cda4fc0d-a40e-4fcd-bad1-9f373aef8395",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -34,6 +37,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d2ab297-142e-4919-9a17-519b407c8019",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -46,6 +50,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af357ab3-1992-402f-869c-47302bd228ef",
    "metadata": {},
    "source": [
     "## Setup"
@@ -54,6 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0d86f001-2679-4ce9-98e8-1d9a687f5c79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +90,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9bb8631d-d401-4ee6-aae6-02e6bd0585f6",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -93,6 +100,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45f6acb2-11b6-44de-b578-911312869b96",
    "metadata": {},
    "source": [
     "### Setting up backend and coupling map"
@@ -101,6 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "c24b5540-f94e-4fa8-96cb-a626573510ef",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +124,9 @@
     }
    ],
    "source": [
-    "service = QiskitRuntimeService(instance=\"crn:v1:bluemix:public:quantum-computing:us-east:a/26b15df5f5684154b2c791c32e07e69b:08dcfec2-410b-45a4-8185-10fd26ce26f6::\")\n",
+    "service = QiskitRuntimeService(\n",
+    "    instance=\"crn:v1:bluemix:public:quantum-computing:us-east:a/26b15df5f5684154b2c791c32e07e69b:08dcfec2-410b-45a4-8185-10fd26ce26f6::\"\n",
+    ")\n",
     "\n",
     "# To run on hardware, select a backend that supports the ecr gate\n",
     "service.backends(filters=lambda x: (\"ecr\" in x.basis_gates))"
@@ -124,10 +135,10 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "d14e123a-df7f-4fa9-9c8c-cf5a57e9f0b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "backend = service.backend(\"ibm_brisbane\")\n",
     "\n",
     "qubits = list(range(backend.num_qubits))"
@@ -136,6 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "406fd2a9-ef54-4f81-861c-b90e4d7434f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,6 +175,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ff27f9d-dbf4-43b8-ad73-3ee464a9d4d5",
    "metadata": {},
    "source": [
     "### Characterization experiments\n",
@@ -193,6 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "d7cb8ad7-ea83-49ed-bde2-ef6953fdc128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,6 +280,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "39d1b87e-54c2-44fe-bd2d-0159467475a9",
    "metadata": {},
    "source": [
     "### QPU properties over time\n",
@@ -275,6 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "8bbb0de5-f450-4d8d-9508-3a979f25c994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +319,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e1bdb14-dca9-4256-9ae5-e1f6acc93c42",
    "metadata": {},
    "source": [
     "Then, let's plot the values"
@@ -311,6 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "b1914005-8f5c-4e72-91f8-304eefe77018",
    "metadata": {},
    "outputs": [
     {
@@ -399,6 +417,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb1d269a-349a-4b73-9f5f-abfa5ed6b71e",
    "metadata": {},
    "source": [
     "You can see that over several days some of the qubit properties can change considerably. This highlights the importance of having fresh information of the QPU status, to be able to select the best performing qubits for an experiment."
@@ -407,6 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "c6e9b05f-88ef-4f10-9c4d-728a957812c0",
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +463,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "779527fd-02bc-41bd-88e3-70a17d99acb4",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -451,6 +472,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8cc1a29c-b5b4-4b6c-8cc9-5b7e90e51871",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives"
@@ -458,6 +480,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7bb078c-9dca-4215-aa93-55ec5761e81a",
    "metadata": {},
    "source": [
     "###  Execute a quantum circuit with default qubit selection\n",
@@ -467,6 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "4250450d-6596-4473-973a-211fd4578289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +508,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0eb66644-5588-4724-8de2-e1d8af0f0b6c",
    "metadata": {},
    "source": [
     "### Execute a quantum circuit with real-time qubit selection\n",
@@ -494,6 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "a260f4ee-8307-431c-bc9b-8cf333a42b91",
    "metadata": {},
    "outputs": [
     {
@@ -674,6 +700,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f1691250-bf7c-4b88-ad98-3fc2c891923b",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format\n",
@@ -686,6 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a670d0f2-3908-4e69-9945-8128db30c36b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,6 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2537f016-484d-4273-8f32-e5ee63598b77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,6 +783,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a7e3b2b-026d-46ae-9f5c-62e97769c1c0",
    "metadata": {},
    "source": [
     "With increasing chain length, and thus less freedom to choose physical qubits, the fact that we have updated information about qubit properties becomes less substantial, with there being no difference when all of the qubits are used."
@@ -761,6 +791,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8c3bc0f-9cbe-4842-ac9a-eded8edfdf74",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
@@ -770,6 +801,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf568284-ae97-4c19-8408-714e7d97b0c3",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -783,7 +815,7 @@
  "metadata": {
   "description": "Run real-time characterization experiments and update backend properties to improve qubit selection when mapping a circuit to the physical qubits on a QPU.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -797,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Real-time benchmarking for qubit selection\n"
  },
