--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6a1ed6d5-8c98-436d-8bfe-57a02c79b408",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25e0965d-aa94-45fb-b85d-3ecffc643421",
    "metadata": {},
    "source": [
     "# Advanced techniques for QAOA\n",
@@ -21,6 +23,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce199646-6b42-4529-8755-490c04d1054d",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -37,6 +40,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "608a70a0-9083-43d1-bcda-e1c92bd21a5d",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -49,6 +53,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7946fb0-6647-4c3f-bf7e-7e91dbaa833b",
    "metadata": {},
    "source": [
     "## Setup"
@@ -57,6 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d2123206-b7b8-4ffb-83ca-d28788e138d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +98,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c15d1762-ede3-4eec-924b-74cb6efff9df",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -110,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "3dfd9af8-23cf-4fa5-8bf8-1270bb7ab9ea",
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "cf99fe0e-3b93-4bd1-ac27-8d75fc68fba7",
    "metadata": {},
    "outputs": [
     {
@@ -157,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0668c4a4-cf6a-48dd-96b8-07992caaf869",
    "metadata": {},
    "outputs": [
     {
@@ -206,6 +216,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fffb3623-7d79-40df-ba21-448ad76821e2",
    "metadata": {},
    "source": [
     "### Hamiltonian &rarr; quantum circuit"
@@ -214,6 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6709745f-9648-4e2e-b63f-dc4fa260db7d",
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +249,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b0ee4e1-1418-4782-8ae2-c0d400515cf6",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -249,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "644d89ba-a8e2-40ca-979e-a6374d383725",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,6 +290,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8480716b-00e2-482f-8352-1f46da3340ec",
    "metadata": {},
    "source": [
     "#### Remap the graph using a SAT mapper\n",
@@ -290,6 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "ffb750c4-b7e0-4eba-bcbf-d815f4bd9e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,6 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1632f42d-3bf8-4459-9611-9b0f04a0c683",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,6 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bccc7411-bc85-4fca-9ae6-bcb7cb4fedc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,6 +556,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2c2a483f-e433-49b8-b304-7814b33ddfbf",
    "metadata": {},
    "source": [
     "#### Build a QAOA circuit with the SWAP strategy and the SAT mapping\n",
@@ -551,6 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6b501db-81c3-4a55-922a-abfc29bda728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,6 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f9ead0a-6a2c-4fea-8f26-cedb2412ecc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,6 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b611f04a-a0d3-437f-93bd-f61ba05c9e7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,6 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fd27d54-6c1b-4da8-bc36-fb46e266776e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,6 +790,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b68a9bdd-dad0-4e5b-a51d-a1284379dfa8",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -781,6 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a895b56c-7931-435d-bd7b-5a9f63923e5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "de425953-6a29-4a39-999c-8920ac77d93f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,6 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84d57a1f-1bbf-404d-af09-f34cb6b07c91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,6 +960,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "761357a4-b49e-49b2-a633-2aee82db7847",
    "metadata": {},
    "source": [
     "The CVaR can be used as an error mitigation technique as previously discussed [\\[4\\]](#references). In this example, we determine $\\alpha$ and the number of shots according to the circuit's error rate."
@@ -941,6 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "54b9472d-8679-48cc-bed1-769b84fa2970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,6 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "400b2935-5b5a-470e-b5ce-28e5a93112d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,6 +1035,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af01baf1-4d9d-4076-a96a-68eaf7f6c2b2",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format"
@@ -1013,6 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1eb0d340-8c7b-472a-947c-590a3a67a95d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,6 +1065,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "18f0e8e1-a23e-44b3-a2dd-db8de14569bc",
    "metadata": {},
    "source": [
     "The following cost is the result of the standard expectation value."
@@ -1041,6 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "03127a04-021b-4114-969e-9193104cb800",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,6 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "124b901d-9f3d-46ab-951e-8fcfb3cbdadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,6 +1125,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c3fd1be-8ac6-435d-a752-8f115232b3cb",
    "metadata": {},
    "source": [
     "Finally, let's draw a graph based on the CVaR result.\n",
@@ -1101,6 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e876ddb-25f2-419a-a675-a268d020ad7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,6 +1154,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "56a7c502-1c22-4bb9-b424-31aaa6b69f4c",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1132,6 +1170,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed86f4d5-d935-43be-9f6a-dbd510bcf036",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -1145,7 +1184,7 @@
  "metadata": {
   "description": "This notebook introduces advanced techniques to improve the performance of the Quantum Approximate Optimization Algorithm (QAOA) with a large number of qubits.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1159,7 +1198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Advanced techniques for QAOA"
  },
