--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -1187,7 +1187,7 @@
  "metadata": {
   "description": "Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1201,7 +1201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Quantum approximate optimization algorithm"
  },
