--- a/docs/tutorials/spin-chain-vqe.ipynb
+++ b/docs/tutorials/spin-chain-vqe.ipynb
@@ -386,7 +386,7 @@
  "metadata": {
   "description": "Build, deploy, and run a Qiskit pattern for simulating a Heisenberg chain and estimating its ground state energy.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Ground state energy estimation of the Heisenberg chain with VQE"
  },
