set up within repo

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -79,6 +79,8 @@ This section introduces advanced capabilities within the Qiskit ecosystem that e
 
 Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving quantum circuit manipulation.
 
+* [Introduction to fractional gates](/docs/tutorials/fractional-gates)
+
 * [Qiskit AI-powered transpiler service introduction](/docs/tutorials/ai-transpiler-introduction)
 
 * [Transpilation optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre)
