--- a/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-circuit-optimization.ipynb
@@ -1178,7 +1178,7 @@
    "outputs": [],
    "source": [
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_brisbane\n",
+    "backend = service.backend(\"ibm_brisbane\")\n",
     "sampler = Sampler(backend)"
    ]
   },
@@ -1270,7 +1270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# backend = service.backend('ibm_brisbane\n",
+    "# backend = service.backend('ibm_brisbane')\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")  # Eagle\n",
