--- a/docs/tutorials/fractional-gates.ipynb
+++ b/docs/tutorials/fractional-gates.ipynb
@@ -1223,7 +1223,7 @@
   }
  ],
  "metadata": {
-  "description": "Fractional gates, parameterized quantum gates that enable direct execution of arbitrary-angle rotations, can greatly reduce depth and duration of quantum circuits.",
+  "description": "Fractional gates, parameterized quantum gates that enable direct execution of arbitrary-angle rotations, can reduce depth and duration of quantum circuits.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
