--- a/docs/tutorials/fractional-gates.ipynb
+++ b/docs/tutorials/fractional-gates.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "qiskit-ibm-runtime package provides a specialized transpiler pass called `FoldRzzAngle` ([link](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/transpiler-passes-fold-rzz-angle)).\n",
     "This pass transforms quantum circuits so that all RZZ angles comply with the RZZ angle constraint.\n",
-    "If you provide the backend to `generate_preset_pass_manager` or `tranpile`, Qiskit automatically applies `FoldRzzAngle` to the input quantum circuits.\n",
+    "If you provide the backend to `generate_preset_pass_manager` or `transpile`, Qiskit automatically applies `FoldRzzAngle` to the input quantum circuits.\n",
     "This asks you to assign parameter values to quantum circuits before transpilation.\n",
     "The workflow proceeds as follows.\n",
     "\n",
@@ -1201,24 +1201,11 @@
    "id": "23ad4615",
    "metadata": {},
    "source": [
-    "## Tutorial Survey\n",
+    "## Tutorial survey\n",
     "\n",
-    "<table style=\"width: 100%;\">\n",
-    "<tbody>\n",
-    "<tr>\n",
-    "<td valign=\"top\" style=\"width: 10%;\"><img src=\"https://your.feedback.ibm.com/jfe/form/SV_cCNiGkGX5xZMzoG\" alt=\"Survey\" width=\"100%\" height=\"100%\"></td>\n",
-    "<td valign=\"top\" style=\"width: 80%;\"><strong><a title=\"Tutorial Survey\" href=\"https://your.feedback.ibm.com/jfe/form/SV_cCNiGkGX5xZMzoG\" target=\"_blank\">Tutorial Survey</a></strong><p><p>Please take one minute to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.</td>\n",
-    "</tr>\n",
-    "</tbody>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22b02053",
-   "metadata": {},
-   "source": [
-    "© IBM Corp. 2025"
+    "Please take this short survey to provide feedback on this tutorial. Your insights will help us improve our content offerings and user experience.\n",
+    "\n",
+    "[Link to survey](https://your.feedback.ibm.com/jfe/form/SV_cCNiGkGX5xZMzoG)"
    ]
   }
  ],
